ARM: dts: msm: Import dtsi files for tissot

--- a/arch/arm/boot/dts/qcom/msm8953-cdp.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8953-cdp.dtsi
@@ -280,11 +280,7 @@
 	status = "ok";
 };
 
-&pm8953_typec {
-	ss-mux-supply = <&pm8953_l13>;
-	qcom,ssmux-gpio = <&tlmm 139 GPIO_ACTIVE_HIGH>;
-	pinctrl-names = "default";
-	pinctrl-0 = <&typec_ssmux_config>;
+&pmi8940_charger {
 };
 
 &pm8953_gpios {
